phone animator screen fix on small width

--- a/src/pages/landing-page/components/phone-animator/phone-animator.scss
+++ b/src/pages/landing-page/components/phone-animator/phone-animator.scss
@@ -17,7 +17,7 @@
   position: absolute;
   width: 100%;
   height: 2000px;
-  top: 50%;
+  top: 244px;
   z-index: 1;
   transform: translateY(-50%);
 }
